Add Liquibase config, changelog, and update test/dev properties

--- a/Backend/digitalMenu/src/main/resources/application-dev.properties
+++ b/Backend/digitalMenu/src/main/resources/application-dev.properties
@@ -13,3 +13,7 @@ spring.jpa.hibernate.ddl-auto=none
 # Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Liquibase Configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
