--- a/Backend/digitalMenu/src/main/resources/application-test.properties
+++ b/Backend/digitalMenu/src/main/resources/application-test.properties
@@ -10,3 +10,11 @@ spring.h2.console.path=/h2-console
 # Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Liquibase Configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+# Database Dialect Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
